Avances del registro de clientes

--- a/Punto de ventas/Punto de ventas.csproj
+++ b/Punto de ventas/Punto de ventas.csproj
@@ -64,7 +64,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelsClass\Cliente.cs" />
     <Compile Include="ModelsClass\TextBoxEvent.cs" />
+    <Compile Include="Models\Clientes.cs" />
+    <Compile Include="Models\reportes_clientes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -110,7 +113,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LinqToDB.Templates\CopyMe.PostgreSQL.tt.txt" />
